== 0.6.3 - ???
* Refactored the Rakefile clean task, and removed the old install task.
* Removed a deprecated gemspec call.

== 0.6.2 - 20-Mar-2010
* Changed license to Artistic 2.0.
* The Host.host_id method has been modified to return a hex value on MS
  Windows in order to be consistent with other platforms.
* Some internal directory layout changes and corresponding changes to the
  Rakefile.
* Additional Rakefile tasks that remove the need for some code that was
  previously inlined into the gemspec directly.
* Updated the gemspec, including an updated description, the addition of a
  license, and changing test-unit to a development dependency.

== 0.6.1 - 18-Nov-2008
* Added the host_id method for Windows, which just returns the MAC address.
* Fixed an issue in the Host.ip_addr method for MS Windows where multiple ip
  addresses might not be handled properly. Thanks go to Murmansk Manny for the
  spot and patch.
* Updated the gemspec to include all .c and .h files now so that it should
  successfully build and install on all Unix platforms.
* Rakefile fix for MS Windows for the install task.
* The test file is now "test_sys_host.rb".

== 0.6.0 - 8-Jun-2007
* Now supports OS X!
* Added the Host.host_id class method.
* Bug/warning fix for OS X.
* HostError is now Host::Error.
* Added a Rakefile, including tasks for installation and testing.
* Fixed the gemspec (I hope).
* Lots of internal reorganization, including the removal of the install.rb
  file. That's handled by the Rakefile.

== 0.5.2 - 27-Jun-2006
* Added the Host.info method for Linux.

== 0.5.1 - 3-Mar-2006
* The Host.info method is now supported on Solaris.
* Moved project to RubyForge.
* Replaced INSTALL with README.
* Made documentation rdoc friendly.
 
== 0.5.0 - 3-Jul-2004
* Replaced Windows C extension with pure Ruby version, using WMI + OLE.
* Added an additional class method called 'info' that returns a HostInfo
  struct.  Currently on Windows only.