@@ -1,4 +1,6 @@
 == 0.6.3 - ???
+* The struct returned by Host.info is now frozen, and the Host.info method
+  no longer takes a block.
 * Refactored the Rakefile clean task, and removed the old install task.
 * Removed a deprecated gemspec call.
 
